--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 * {
-    font-family: "Google Sans", sans-serif;
     box-sizing: border-box;
 }
 
@@ -16,12 +15,6 @@ p {
 
 .list {
     line-height: 1.5em;
-}
-
-.code {
-    text-indent:5%;
-    background-color: lightgray;
-    text-wrap: balance;
 }
 
 .odd {
@@ -72,11 +65,33 @@ p {
 nav {
     margin: auto;
     text-align: center;
-    padding: 4px;
+    padding: 20px;
     font-size: 24px;
 }
 
-.menu {
-    padding: 4px;
-    margin: 5px;
+.one {
+    background-color: lightcoral;
+    color: darkred;
+    border: 10px solid purple;
+    box-sizing: border-box;
+    padding: 20px;
+    text-align: center;
+    height: 100px;
+    width: 100px;
+}
+
+.two {
+    background-color: lightskyblue;
+    color: darkblue;
+    border: 40px solid green;
+    padding: 50px;
+    margin: 100px;
+    text-align: center;
+    height: 100px;
+    width: 100px;
+}
+
+code {
+    background-color: lightgray;
+    font-family:'Courier New', Courier, monospace;
 }
