--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    border: 2px solid red;
 }
 
 h1 {
@@ -63,10 +64,13 @@ p {
 }
 
 nav {
-    margin: auto;
+    margin: 0 auto;
     text-align: center;
     padding: 20px;
     font-size: 24px;
+    display: inline-block;
+    background-color: aquamarine;
+    width: 100%;
 }
 
 .one {
@@ -94,4 +98,16 @@ nav {
 code {
     background-color: lightgray;
     font-family:'Courier New', Courier, monospace;
+}
+
+.menu {
+    padding: 8px;
+    margin: 8px;
+    background-color:azure;
+    border: 2px solid darkgray;
+}
+
+.menu:hover {
+    background-color:blue;
+    color: yellow;
 }
