--- a/practice/flexbox.css
+++ b/practice/flexbox.css
@@ -1,18 +1,18 @@
 .flex-container {
     display: flex;
-    background:lightblue;
-    padding:16px;
-    border:4px solid blue;
-    gap:8px;
   }
   
   /* this selector selects all divs inside of .flex-container */
   .flex-container div {
     background: peachpuff;
-    border: 4px solid salmon;
-    height: 48px;
-    flex: 1;
-    padding:4px;
+    border: 4px solid brown;
+    height: 100px;
+    width: 250px;
+    flex: 1 1 auto;
+  }
+
+  .flex-container .two {
+    flex-shrink: 0;
   }
 
   .menu {
