--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     border: 0px solid red;
 }
 
+body {
+    margin: 0;
+}
+
 h1 {
     font-size: 24px;
     text-align:center;
@@ -136,4 +140,9 @@ code {
     gap: 16px;
     margin: 0;
     padding: 0;
+}
+
+.container {
+    padding-left: 3rem;
+    padding-right: 3rem;
 }
