--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    margin: 0;
+    margin: 10px;
 }
 
 h1 {
@@ -84,7 +84,7 @@ a:link {
 }
 
 nav {
-    margin: 0 auto;
+    margin: 0;
     text-align: center;
     padding: 20px;
     font-size: 24px;
